# RAG

./: .env.example  .gitignore  README.md  app.py  day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  evaluator2.py  pyproject.toml
Agentic-RAG-InsureLLM/: README.md  evaluator.py  requirements.txt
Agentic-RAG-InsureLLM/evaluation/: eval.py  test.py
Agentic-RAG-InsureLLM/implementation/: answer.py  ingest.py
ed/Agentic_RAG/: 1_rag.ipynb  2_agentic_rag.ipynb  facts.jsonl  link.txt  transcript.txt
ed/Agentic_Rag_MCP/expert-main/: .gitignore  README.md  ingest.ipynb  ingest_windows.ipynb  link.txt  next_level.ipynb  styles.py  transcript.txt
ed/Agentic_Rag_MCP/expert-next/: FAQ.md  README.md  ingest.ipynb  link.txt  next_level.ipynb  pyproject.toml  transcript.txt
evaluation/: eval.py
implementation/: answer.py  ingest.py
pro_implementation/: answer.py
protonx/: link_thôngtin_cầnthiết.txt
study_guide/: agentic-rag-insurellm-study-guide-codex.html  agentic-rag-insurellm-study-guide.html  agentic-rag-mcp-next-level-study-guide-agy.html  agentic-rag-mcp-next-level-study-guide-codex.html  agentic-rag-mcp-study-guide-agy.html  agentic-rag-mcp-study-guide-codex.html  agentic-rag-study-guide-agy.html  agentic-rag-study-guide-codex.html  day1-rag-study-guide.html  day2-rag-study-guide.html  day3-rag-study-guide.html  day4-rag-study-guide.html  day5-rag-study-guide.html  prompt tạo tài liêu ôn tập.txt  study-guide-template.html
