[project]
name = "expert"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "openai>=2.36.0",
    "openai-agents[litellm]>=0.17.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.0",
]
